--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.21.1"
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "react-router-dom": "^6.21.1",
+    "typescript": "^5.3.3"
   }
 }
