--- a/package.json
+++ b/package.json
@@ -3,34 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.3",
-    "craco-less": "^3.0.1",
+    "axios": "^0.24.0",
     "formik": "^2.4.5",
-    "less": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
+    "react-icons": "^4.2.0",
     "react-modal": "^3.16.1",
     "react-rating-stars-component": "^2.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^3.5.1",
-    "yup": "^1.3.3"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.2.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start",
+    "watch-less": "postcss ./src/styles/main.less -o ./src/styles/main.css --watch",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -44,10 +36,20 @@
       "last 1 safari version"
     ]
   },
+  
   "devDependencies": {
-    "@types/react": "^18.2.47",
-    "@types/react-dom": "^18.2.18",
-    "react-router-dom": "^6.21.1",
-    "typescript": "^5.3.3"
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "css-loader": "^6.9.0",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.4",
+    "postcss": "^8.4.33",
+    "postcss-cli": "^11.0.0",
+    "postcss-import": "^16.0.0",
+    "postcss-less": "^6.0.0",
+    "postcss-loader": "^7.3.4",
+    "react-router-dom": "^6.3.1",
+    "style-loader": "^3.3.4",
+    "typescript": "^4.5.5"
   }
 }
