--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.16",
     "axios": "^0.24.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
@@ -14,6 +15,7 @@
     "react-modal": "^3.16.1",
     "react-rating-stars-component": "^2.2.0",
     "react-scripts": "^5.0.1",
+    "tailwindcss": "^3.4.1",
     "web-vitals": "^3.2.1",
     "yup": "^0.32.11"
   },
@@ -36,7 +38,6 @@
       "last 1 safari version"
     ]
   },
-  
   "devDependencies": {
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
