--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "autoprefixer": "^10.4.16",
     "axios": "^0.24.0",
     "formik": "^2.4.5",
+    "node-gyp": "^10.0.1",
+    "node-sass": "^8.0.0",
+    "postcss-nested": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
@@ -21,7 +24,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "watch-less": "postcss ./src/styles/main.less -o ./src/styles/main.css --watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
