--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.16",
     "axios": "^0.24.0",
+    "chart.js": "^2.3.0",
     "formik": "^2.4.5",
     "node-gyp": "^10.0.1",
     "node-sass": "^8.0.0",
     "postcss-nested": "^6.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^2.5.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
     "react-rating-stars-component": "^2.2.0",
     "react-scripts": "^5.0.1",
